test game part 1. Start new portfolio

--- a/indexnew.html
+++ b/indexnew.html
@@ -6,119 +6,67 @@
 	<title>Valerie Mack</title>
 	<link rel="stylesheet" href="css/main.css?v=1" type="text/css">
 	<link rel="stylesheet" href="css/semantic.min.css?v=1" type="text/css">
-
-  <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
-
   <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
 
+  <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
   <link rel="shortcut icon" type="image/png" href="images/skills-favicon.png"/>
 
   <script src="semantic/dist/semantic.min.js"></script>
   <script src="js/jquery-2.1.4.min.js" type="text/javascript"></script>
   <script src="js/semantic.min.js" type="text/javascript"></script>
-  <script src="js/background-blur.min.js"></script>
   <script src="js/script.js" type="text/javascript"></script>
 </head>
 <body>
-  <div id="hdrImg">
-    <img class="ui centered image" src="images/header.png">
-  </div>
-
-  <!-- mobile -->
-<!--   <div class="ui basic segment">
-    <button id="bttn" class="massive circular ui icon black button">
-      <i class="sidebar icon"></i>
-    </button>
-  </div> -->
 
   <!-- ABOUT -->
   <div id="precontainer" class="ui container">
-
     <div id="about" class="ui center aligned masthead basic segment">
-      <div class="ui sizer vertical basic segment">
-
-        <div class="ui huge centered header">Valerie Denay Mack</div>
-
-        <div class="ui three column relaxed stackable grid container"> 
-          <div class="center aligned row">
-            <div class="four wide column">
-            </div>
-            <div class="eight wide column"><p>
-              I discover needs, generate ideas, sweat the details, take initiative, desgin with empathy, work passionately, and adapt to anything.</p>
-            </div>
-            <div class="four wide column">
-            </div>
-          </div>
-        </div>
-
-      </div>
-
-      <!-- mobile -->
-  <div class="ui basic center aligned segment" id="jankless">
-    <div>BA Information Science</div>
-          <div>Business Minor</div>
-          <div>Cornell University, 2016</div>
-
-          <div class="ui icon buttons">
-            <a href="https://valeriemack.quora.com/"><button class="ui basic inverted button"><i><img class="custom" src="images/quora.png"></i></button>
-            </a>
-            <a href="https://github.com/thevaleriemack"><button class="ui basic inverted button"><i class="large black github icon"></i></button></a>
-            <a href="https://www.linkedin.com/in/valeriemack"><button class="ui basic inverted button"><i class="large black linkedin icon"></i></button></a>
-          </div>
-
-          <a href="https://drive.google.com/a/cornell.edu/file/d/0B9sIkEIvEA_wWWNDUi1WekNwYTg/view?usp=sharing"><button class="ui basic button">Request Resume</button></a>
-  
-  </div>
-  <div id="dropdown-icon-mobile">
-
-        <a href="#projects">
-          <button class='circular basic ui icon button'>
-            <i class='dropdown icon'></i>
-          </button>
-        </a>
-
-      </div>
-      <!-- mobile -->
-
-      <div id="dropdown-icon">
-
-        <a href="#projects">
-          <button class='circular basic inverted ui icon button'>
-            <i class='dropdown icon'></i>
-          </button>
-        </a>
-
-      </div>
-
+      <div class="ui huge centered header">Valerie Denay Mack</div>
+      <p>I discover needs, generate ideas, sweat the details, take initiative, desgin with empathy, work passionately, and adapt to anything.</p>
     </div>
-    <!-- precontainer -->
+    <div id="dropdown-icon">
+      <a href="#projects">
+        <button class='circular basic inverted ui icon button'>
+          <i class='dropdown icon'></i>
+        </button>
+      </a>
+    </div>
   </div>
 
-  <div class="ui grid container" id="container">
-    <!-- container -->
+  <div id="contianer" class="ui grid container">
+    <div id="leftSide" class="four wide column">
+      <div id="sdBr" class="ui basic sticky center aligned segment">
+        <h1 id="theHead" class="ui header">Val</h1>
+        <div>BA Information Science</div>
+        <div>Business Minor</div>
+        <div>Cornell University, 2016</div>
 
-    <div class="four wide column" id="leftSide">
-      <div class="ui basic sticky center aligned segment" id="sdBr">
-        <h1 class="ui header">
-          <div class="content" id="theHead">Val</div>
-          </h1>
-          <div>BA Information Science</div>
-          <div>Business Minor</div>
-          <div>Cornell University, 2016</div>
-
-          <div class="ui icon buttons">
-            <a href="https://valeriemack.quora.com/"><button class="ui basic inverted button"><i><img class="custom" src="images/quora.png"></i></button>
-            </a>
-            <a href="https://github.com/thevaleriemack"><button class="ui basic inverted button"><i class="large black github icon"></i></button></a>
-            <a href="https://www.linkedin.com/in/valeriemack"><button class="ui basic inverted button"><i class="large black linkedin icon"></i></button></a>
-          </div>
-
-          <a href="https://drive.google.com/a/cornell.edu/file/d/0B9sIkEIvEA_wWWNDUi1WekNwYTg/view?usp=sharing"><button class="ui basic button">Request Resume</button></a>
+        <div class="ui icon buttons">
+          <a href="https://valeriemack.quora.com/">
+            <button class="ui basic inverted button">
+              <i><img class="custom" src="images/quora.png"></i>
+            </button>
+          </a>
+          <a href="https://github.com/thevaleriemack">
+            <button class="ui basic inverted button">
+              <i class="large black github icon"></i>
+            </button>
+          </a>
+          <a href="https://www.linkedin.com/in/valeriemack">
+            <button class="ui basic inverted button">
+              <i class="large black linkedin icon"></i>
+            </button>
+          </a>
         </div>
+
+        <a href="https://drive.google.com/a/cornell.edu/file/d/0B9sIkEIvEA_wWWNDUi1WekNwYTg/view?usp=sharing">
+          <button class="ui basic button">Request Resume</button>
+        </a>
       </div>
+    </div>
 
       <!-- MAIN CONTENT -->
-      <div class="twelve wide column" id="mnCntnt">
+      <div id="mnCntnt" class="twelve wide column">
 
         <div id="FUCKWIT" name="projects" class="ui basic segment">
 
@@ -523,18 +471,6 @@
               <img class="ui medium image left floated" src="images/bigredcarnevale.png" alt="Advertisement for Cornell club event">
             </div>
           </div>
-
-<!-- <div id="modal-jk" class="ui modal">
-  <div id="modalHeader" class="header">
-    Logo design for seasonal bakery
-    <button class="ui circular basic right floated icon button">
-  <i class="close icon"></i>
-</button>
-  </div>
-  <div class="content">
-      <img id="modalImage" class="image mod" src="images/julieskitchen.png">
-  </div>
-</div> -->
 
 <div class="ui small modal">
   <div class="header">
