click to shoot. a and d to move. ball shrinks.

--- a/game/pong.html
+++ b/game/pong.html
@@ -5,6 +5,10 @@
 		<link rel="stylesheet" href="pong.css?v=1" type="text/css">
 	</head>
 	<body>
+		<div id="abt">
+			<h2>How to play:</h2>
+			<p>Press A to move left. Press D to move right. Click to throw.</p>
+		</div>
 		<div id="cnvs">
 			<!-- The canvas for the background -->
 			<canvas id="background" width="395" height="621">
