--- a/game/pong.html
+++ b/game/pong.html
@@ -14,10 +14,10 @@
 			<canvas id="background" width="395" height="621">
 				:( It no working. Try Chrome!
 			</canvas>
-			<!-- The canvas for the cups and UI -->
+			<!-- The canvas for balls that are thrown -->
 			<canvas id="main" width="395" height="621">
 			</canvas>
-			<!-- The canvas the ball uses (can only move up half the screen.) -->
+			<!-- The canvas the primer ball (can only move up half the screen.) -->
 			<canvas id="primer" width="395" height="621">
 			</canvas>
 		</div>
