update w github projects in sidebar

--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
+<!--
+Hello!
+If you like what you see, feel free to contact me at dgm97@cornell.edu
+P.S. You can view this website on a mobile phone or a tablet with ease!
+-->
 <html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Valerie Mack</title>
-	<link rel="stylesheet" href="css/main.css?v=1" type="text/css">
-	<link rel="stylesheet" href="css/semantic.min.css?v=1" type="text/css">
-
-  <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
-
+	<title>Val Mack</title>
+  <link rel="stylesheet" href="css/main.css?v=1" type="text/css">
+  <link rel="stylesheet" href="css/semantic.min.css?v=1" type="text/css">
   <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
 
+  <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
   <link rel="shortcut icon" type="image/png" href="images/skills-favicon.png"/>
 
   <script src="semantic/dist/semantic.min.js"></script>
@@ -20,9 +23,6 @@
   <script src="js/script.js" type="text/javascript"></script>
 </head>
 <body>
-  <div id="hdrImg">
-    <img class="ui centered image" src="images/header.png">
-  </div>
 
   <!-- mobile -->
 <!--   <div class="ui basic segment">
@@ -37,7 +37,7 @@
     <div id="about" class="ui center aligned masthead basic segment">
       <div class="ui sizer vertical basic segment">
 
-        <div class="ui huge centered header">Valerie Denay Mack</div>
+        <div class="ui huge centered header">Val</div>
 
         <div class="ui three column relaxed stackable grid container"> 
           <div class="center aligned row">
@@ -55,18 +55,17 @@
 
       <!-- mobile -->
   <div class="ui basic center aligned segment" id="jankless">
-    <div>BA Information Science</div>
-          <div>Business Minor</div>
-          <div>Cornell University, 2016</div>
+    <div>Master of Professional Studies &</div>
+          <div>BA Information Science</div>
+          <div>Cornell University</div>
 
           <div class="ui icon buttons">
             <a href="https://valeriemack.quora.com/"><button class="ui basic inverted button"><i><img class="custom" src="images/quora.png"></i></button>
             </a>
             <a href="https://github.com/thevaleriemack"><button class="ui basic inverted button"><i class="large black github icon"></i></button></a>
-            <a href="https://www.linkedin.com/in/valeriemack"><button class="ui basic inverted button"><i class="large black linkedin icon"></i></button></a>
           </div>
 
-          <a href="https://drive.google.com/a/cornell.edu/file/d/0B9sIkEIvEA_wWWNDUi1WekNwYTg/view?usp=sharing"><button class="ui basic button">Request Resume</button></a>
+          <a href="https://drive.google.com/open?id=0B9sIkEIvEA_wUnFrc2I4dl9JUGs"><button class="ui basic button">Request Resume</button></a>
   
   </div>
   <div id="dropdown-icon-mobile">
@@ -83,7 +82,7 @@
       <div id="dropdown-icon">
 
         <a href="#projects">
-          <button class='circular basic inverted ui icon button'>
+          <button class='circular basic ui icon button'>
             <i class='dropdown icon'></i>
           </button>
         </a>
@@ -94,33 +93,92 @@
     <!-- precontainer -->
   </div>
 
-  <div class="ui grid container" id="container">
+  <div class="ui grid" id="container">
     <!-- container -->
 
-    <div class="four wide column" id="leftSide">
+    <div class="three wide column" id="leftSide">
       <div class="ui basic sticky center aligned segment" id="sdBr">
         <h1 class="ui header">
-          <div class="content" id="theHead">Val</div>
+          <div class="content" id="theHead">Val Mack</div>
           </h1>
+          <div>Master of Professional Studies &</div>
           <div>BA Information Science</div>
-          <div>Business Minor</div>
-          <div>Cornell University, 2016</div>
+          <div>Cornell University</div>
 
-          <div class="ui icon buttons">
-            <a href="https://valeriemack.quora.com/"><button class="ui basic inverted button"><i><img class="custom" src="images/quora.png"></i></button>
-            </a>
-            <a href="https://github.com/thevaleriemack"><button class="ui basic inverted button"><i class="large black github icon"></i></button></a>
-            <a href="https://www.linkedin.com/in/valeriemack"><button class="ui basic inverted button"><i class="large black linkedin icon"></i></button></a>
+          <br/>
+          <a href="https://drive.google.com/open?id=0B9sIkEIvEA_wUnFrc2I4dl9JUGs"><button class="ui basic button">Request Resume</button></a>
+          <br/>
+
+                    <!-- FEED -->
+          <div class="ui feed">
+
+            <div class="event">
+              <div class="label">
+                <button class="ui basic inverted button">
+                <i>
+                <a href="https://valeriemack.quora.com/Automated-Feedback-Generation-for-Introductory-Programming-Assignments-Recapitulation"><img id="custom" src="images/quora.png">
+                </a>
+              </i>
+              </button>
+              </div>
+              <div class="content">
+                <div class="date">
+                  September 2016
+                </div>
+                <div class="summary">
+                  Recapitulation
+               </div>
+               <div class="extra text">
+              Automated Feedback Generation for Introductory Programming Assignments
+            </div>
+            </div>
           </div>
 
-          <a href="https://drive.google.com/a/cornell.edu/file/d/0B9sIkEIvEA_wWWNDUi1WekNwYTg/view?usp=sharing"><button class="ui basic button">Request Resume</button></a>
+            <div class="event">
+              <div class="label">
+                <a href="https://github.com/thevaleriemack/unblockem"><button class="ui basic inverted button"><i class="large black github icon"></i></button></a>
+              </div>
+              <div class="content">
+                <div class="date">
+                  August 2016
+                </div>
+                <div class="summary">
+                 UnblockEm
+               </div>
+               <div class="extra text">
+              Wrote a Chrome extension that removes 'log-in stops' on Quora.
+            </div>
+            </div>
+          </div>
+
+          <div class="event">
+            <div class="label">
+              <a href="https://hackwit.github.io"><button class="ui basic inverted button"><i class="large black github icon"></i></button></a>
+            </div>
+            <div class="content">
+              <div class="date">
+                Summer 2016
+              </div>
+              <div class="summary">
+               Hackwit
+             </div>
+             <div class="extra images">
+              <a><img class="ui medium image" src="images/covers/hackwit-cover.png" alt="Glass Content Layout"></a>
+              </div>
+             <div class="extra text">
+              Designed and taught a programming course where students learned to create a website with GitHub Pages, to make a <a href="https://hackwit.github.io/views/game.html">JavaScript game</a>, and to scrape data with the Facebook Graph API.
+            </div>
+          </div>
+        </div>
+        <!-- FEED -->
+      </div>
         </div>
       </div>
 
       <!-- MAIN CONTENT -->
-      <div class="twelve wide column" id="mnCntnt">
+      <div class="thirteen wide column" id="mnCntnt">
 
-        <div id="FUCKWIT" name="projects" class="ui basic segment">
+        <div id="covers" name="projects" class="ui basic segment">
 
           <!-- divider -->
           <h3 class="ui divider horizontal hidden">
@@ -135,7 +193,7 @@
                 <div class="content">
                   <div class="center">
                     <div class="description">
-                      Game design
+                      Game Design &amp; Data Analysis
                     </div>
                     <div class="plus icon wrapper">
                       <button class='circular basic inverted ui icon button'>
@@ -164,21 +222,23 @@
               <a href="http://www.kongregate.com/games/maxxmcc/clone-combat">Play on Kongregate</a>
             </span>
 
-            <p>Clone Combat is a game that I created with classmates for our Analytics-Driven Game Design course. I came up with the concept for this puzzle platformer where the player has to defeat clones who mirror each of the player's inputs in real time. We successfully executed our ideas, creating three iterative versions that improved over each design cycle.</p>
+            <h3>Overview</h3>
+            <p>Clone Combat is a game that I created with classmates for our Analytics-Driven Game Design course. We successfully executed our ideas, creating three iterative versions that improved over each design cycle.</p>
 
             <div class="ui medium rounded images">
               <img class="ui medium image" src="images/samples/level22.png" alt="Kongregate Level 22">
               <img class="ui medium image" src="images/samples/engagement.png" alt="Burndown Chart">
             </div>
-
-            <p>My primary roles were user interface and user experience designer.</p>
+            <h3>My role</h3>
+            <p>My primary roles were user interface and user experience designer. I also came up with the game concept--a puzzle platformer where the player has to defeat clones who mirror each of the player's inputs in real time.</p>
+            <h3>Challenges</h3>
             <p>After analyzing our data from play testers, I concluded that our greatest design challenge was learnability, so I created comprehensive tutorial levels that increased player engagement. (See slides on top right and bottom left.)</p>
 
             <div class="ui medium rounded images">
               <img class="ui medium image" src="images/samples/tutoriallevel.png" alt="Conduction Tutorial Level">
               <img class="ui medium image" src="images/samples/newgrounds.png" alt="Newgrounds Results">
             </div>
-
+            <h3>Results</h3>
             <p>Clone Combat was one of the most successful games produced from our class. It was featured on Newgrounds and received a 3.5 / 5 rating and over 20,000 plays in the first week. With a tougher audience on Kongregate, we received a 3.1 / 5 star rating.</p>
 
           <!-- clonecard1 -->
@@ -556,7 +616,7 @@
 </div>
 
   <div class="ui footer vertical segment">
-    <p>This website was created by Valerie Denay Mack. </p>
+    <p>This website was created by Val Mack using Semantic UI. </p>
     <p>&copy; 2016</p>
 </div>
 
