--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ P.S. You can view this website on a mobile phone or a tablet with ease!
                Hackwit
              </div>
              <div class="extra images">
-              <a><img class="ui medium image" src="images/covers/hackwit-cover.png" alt="Glass Content Layout"></a>
+              <a><img class="ui medium image" src="images/previews/hackwit.png" alt="Glass Content Layout"/></a>
               </div>
              <div class="extra text">
               Designed and taught a programming course where students learned to create a website with GitHub Pages, to make a <a href="https://hackwit.github.io/views/game.html">JavaScript game</a>, and to scrape data with the Facebook Graph API.
