shorten feed descrips

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ P.S. You can view this website on a mobile phone or a tablet with ease!
                  UnblockEm
                </div>
                <div class="extra text">
-              Wrote a Chrome extension that removes 'log-in stops' on Quora.
+              A Chrome extension that removes 'log-in stops' on Quora
             </div>
             </div>
           </div>
@@ -166,7 +166,7 @@ P.S. You can view this website on a mobile phone or a tablet with ease!
               <a><img src="images/previews/hackwit.png" alt="HTML5 Brick Game"/></a>
               </div>
              <div class="extra text">
-              Designed and taught a programming course where students learned to create a website with GitHub Pages, to make a <a href="https://hackwit.github.io/views/game.html">JavaScript game</a>, and to scrape data with the Facebook Graph API.
+               Summer programming course to learn GitHub Pages, <a href="https://hackwit.github.io/views/game.html">JavaScript</a>, and to data scraping with the Facebook Graph API.
             </div>
           </div>
         </div>
