del image from feed

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ P.S. You can view this website on a mobile phone or a tablet with ease!
                   Recapitulation
                </div>
                <div class="extra text">
-              Automated Feedback Generation for Introductory Programming Assignments
+              Topic: Automated Feedback Generation for Introductory Programming Assignments
             </div>
             </div>
           </div>
@@ -162,11 +162,8 @@ P.S. You can view this website on a mobile phone or a tablet with ease!
               <div class="summary">
                Hackwit
              </div>
-             <div class="extra images">
-              <a><img src="images/previews/hackwit.png" alt="HTML5 Brick Game"/></a>
-              </div>
              <div class="extra text">
-               Summer programming course to learn GitHub Pages, <a href="https://hackwit.github.io/views/game.html">JavaScript</a>, and to data scraping with the Facebook Graph API.
+               Summer programming course to learn GitHub Pages, <a href="https://hackwit.github.io/views/game.html">JavaScript</a>, and to data scraping with the Facebook Graph API
             </div>
           </div>
         </div>
