resize mobile social icons

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@ P.S. You can view this website on a mobile phone or a tablet with ease!
           <div>Cornell University</div>
 
           <div class="ui icon buttons">
-            <a href="https://valeriemack.quora.com/"><button class="ui basic inverted button"><i><img class="custom" src="images/quora.png"></i></button>
+            <a href="https://valeriemack.quora.com/"><button class="ui basic huge inverted button"><i><img class="custom" src="images/quora.png"></i></button>
             </a>
-            <a href="https://github.com/thevaleriemack"><button class="ui basic inverted button"><i class="large black github icon"></i></button></a>
+            <a href="https://github.com/thevaleriemack"><button class="ui basic huge inverted button"><i class="large black github icon"></i></button></a>
           </div>
 
-          <a href="https://drive.google.com/open?id=0B9sIkEIvEA_wUnFrc2I4dl9JUGs"><button class="ui basic button">Request Resume</button></a>
+          <a href="https://drive.google.com/open?id=0B9sIkEIvEA_wUnFrc2I4dl9JUGs"><button class="ui basic button" id="reqres">Request Resume</button></a>
   
   </div>
   <div id="dropdown-icon-mobile">
