--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@ P.S. You can view this website on a mobile phone or a tablet with ease!
 	
 	<script src="js/jquery-2.1.4.min.js" type="text/javascript"></script>
   <script src="semantic/dist/semantic.min.js"></script>
-  <script src="js/semantic.min.js" type="text/javascript"></script>
-  <script src="js/background-blur.min.js"></script>
+	<script src="js/semantic.min.js" type="text/javascript"></script>
   <script src="js/script.js" type="text/javascript"></script>
 </head>
 <body>
@@ -171,7 +170,7 @@ P.S. You can view this website on a mobile phone or a tablet with ease!
             <p>Cappuccino is a live, in-class question and answer application created with Ruby on Rails. With the help of my teammates, I brought this idea to reality for my Educational Technology course.</p>
             <div class="ui medium rounded images">
               <img class="ui medium image" src="images/samples/capp-mya.png" alt="Current Student Answer">
-              <img class="ui medium image" src="images/samples/capp-myq.png" alt="Current Student question">
+              <img class="ui medium image" src="images/samples/capp-myq.png" alt="Current Student Question">
             </div>
             <h3>My role</h3>
             <p>Front-end development</p>
@@ -520,6 +519,7 @@ P.S. You can view this website on a mobile phone or a tablet with ease!
               <img class="ui medium image left floated" src="images/bigredcarnevale.png" alt="Advertisement for Cornell club event">
             </div>
           </div>
+/graphic_designs -->
 
 <div class="ui small modal">
   <div class="header">
@@ -533,7 +533,6 @@ P.S. You can view this website on a mobile phone or a tablet with ease!
   </div>
 </div>
 </div>
-				/graphic_designs -->
 </div>
 </div>
 	<!-- .ui.footer.vertical.segment -->
