--- a/index.html
+++ b/index.html
@@ -73,10 +73,12 @@ P.S. You can view this website on a mobile phone or a tablet with ease!
           <div class="content" id="theHead">Val</div>
 				</h1>
 				<div>
-					<p>Master of Professional Studies &<br>BA Information Science <br>Cornell University</p>
+					<p>Master of Professional Studies &<br>BA Information Science <br>Cornell University
+					</p>
 				</div>
 				<br/>
-				<a href="https://drive.google.com/open?id=0B9sIkEIvEA_wUnFrc2I4dl9JUGs"><button class="ui basic button">Request Resume</button></a>
+				<a href="https://drive.google.com/open?id=0B9sIkEIvEA_wUnFrc2I4dl9JUGs" target="_blank"><button class="ui basic button">Request Resume</button></a> | 
+				<a href="https://www.linkedin.com/in/valmack" target="_blank"><button class="circular basic ui icon button"><i class="linkedin icon"></i></button></a>
 				<br/>
         <div class="ui feed">
 					<div class="event">
