--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ P.S. You can view this website on a mobile phone or a tablet with ease!
 						<div class="four wide column">
             </div>
             <div class="eight wide column">
-							<p>I discover needs, generate ideas, sweat the details, take initiative, desgin with empathy, work passionately, and adapt to anything.</p>
+							<p>I discover needs, generate ideas, sweat the details, take initiative, design with empathy, work passionately, and adapt to anything.</p>
             </div>
             <div class="four wide column">
             </div>
