--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@ P.S. You can view this website on a mobile phone or a tablet with ease!
 					</p>
 				</div>
 				<br/>
-				<a href="https://drive.google.com/open?id=0B9sIkEIvEA_wUnFrc2I4dl9JUGs" target="_blank"><button class="ui basic button">Request Resume</button></a> | 
-				<a href="https://www.linkedin.com/in/valmack" target="_blank"><button class="circular basic ui icon button"><i class="linkedin icon"></i></button></a>
+				<a href="https://drive.google.com/open?id=0B9sIkEIvEA_wUnFrc2I4dl9JUGs" target="_blank"><button class="ui basic button">Request Resume</button></a> 				
+<a href="https://www.linkedin.com/in/valmack" target="_blank"><button class="circular basic ui icon button"><i class="linkedin icon"></i></button></a>
 				<br/>
         <div class="ui feed">
 					<div class="event">
